--- a/web/views/index.html
+++ b/web/views/index.html
@@ -18,8 +18,6 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4" align="center">
@@ -36,6 +34,12 @@
 
         </form>
         </p>
+    </div>
+    <div class="col-md-4 col-md-offset-4" align="left" id="results">
+        <h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4>
+            <blockquote>
+                <h5><p><a href="http://www.udel.edu/v2g">www.udel.edu/v2g</a></p></h5>
+            </blockquote>
     </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
