--- a/web/views/index.html
+++ b/web/views/index.html
@@ -9,9 +9,44 @@
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <script language="JavaScript" type="text/javascript">
+        window.addEventListener('load', function() {
+
+            function invoke() {
+                alert("koumpi!")
+                $.ajax({
+                    url: 'http://localhost:3000/getResults',
+                    data: 'term=' + term, // Send value of the clicked button
+                    dataType: 'json',
+                    success: function (data) {
+                        var resp = document.getElementById('results');
+                        var respContents = "<h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4><blockquote>"
+                        respContents += "<h5><p><a href='http://www.udel.edu/v2g'>www.udel.edu/v2g</a></p></h5></blockquote>"
+                        resp.innerHTML = respContents;
+                        $("#results").fadeIn(1000);
+                    },
+                    error: function (data) {
+                        var resp = document.getElementById('results');
+                        var respContents = "<h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4><blockquote>"
+                        respContents += "<h5><p><a href='http://www.udel.edu/v2g'>www.udel.edu/v2g</a></p></h5></blockquote>"
+                        resp.innerHTML = respContents;
+                        $("#results").fadeIn(1000);
+                    }
+                });
+                return true;
+
+            }
+
+            function test() {
+                alert("test")
+            }
+
+            alert("Add listener");
+            Document.getElementById("koumpi").addEventListener("click", test);
+        });
+    </script>
 </head>
 <body>
 <br/>
@@ -28,18 +63,14 @@
         <form role="form" class="form-inline">
             <div class="form-group">
                 <input type="text" class="form-control" id="search_input" placeholder="Re..Search!">
-                <button type="submit" class="btn btn-warning">Search!</button>
-
+                <button type="button" class="btn btn-warning" id="koumpi">Search!</button>
             </div>
 
         </form>
         </p>
     </div>
     <div class="col-md-4 col-md-offset-4" align="left" id="results">
-        <h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4>
-            <blockquote>
-                <h5><p><a href="http://www.udel.edu/v2g">www.udel.edu/v2g</a></p></h5>
-            </blockquote>
+
     </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
