--- a/web/views/index.html
+++ b/web/views/index.html
@@ -14,37 +14,37 @@
     <script language="JavaScript" type="text/javascript">
         window.addEventListener('load', function() {
 
-            function invoke() {
-                alert("koumpi!")
-                $.ajax({
-                    url: 'http://localhost:3000/getResults',
-                    data: 'term=' + term, // Send value of the clicked button
-                    dataType: 'json',
-                    success: function (data) {
-                        var resp = document.getElementById('results');
-                        var respContents = "<h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4><blockquote>"
-                        respContents += "<h5><p><a href='http://www.udel.edu/v2g'>www.udel.edu/v2g</a></p></h5></blockquote>"
-                        resp.innerHTML = respContents;
-                        $("#results").fadeIn(1000);
-                    },
-                    error: function (data) {
-                        var resp = document.getElementById('results');
-                        var respContents = "<h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4><blockquote>"
-                        respContents += "<h5><p><a href='http://www.udel.edu/v2g'>www.udel.edu/v2g</a></p></h5></blockquote>"
-                        resp.innerHTML = respContents;
-                        $("#results").fadeIn(1000);
-                    }
-                });
-                return true;
+            function invoke(term) {
+                alert("1");
+                return function() {
+                    alert(term);
+                    $.ajax({
+                        url: 'http://localhost:3000/getResults',
+                        data: 'term=' + term, // Send value of the clicked button
+                        dataType: 'json',
+                        success: function (data) {
+                            var resp = document.getElementById('results');
+                            var respContents = "<h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4><blockquote>"
+                            respContents += "<h5><p><a href='http://www.udel.edu/v2g'>www.udel.edu/v2g</a></p></h5></blockquote>"
+                            resp.innerHTML = respContents;
+                            $("#results").fadeIn(1000);
+                        },
+                        error: function (data) {
+                            var resp = document.getElementById('results');
+                            var respContents = "<h4>University of Delaware | V2G <small>(Score: 12.32)</small></h4><blockquote>"
+                            respContents += "<h5><p><a href='http://www.udel.edu/v2g'>www.udel.edu/v2g</a></p></h5></blockquote>"
+                            resp.innerHTML = respContents;
+                            $("#results").fadeIn(1000);
+                        }
+                    });
+                    return true;
+                }
 
-            }
-
-            function test() {
-                alert("test")
             }
 
             alert("Add listener");
-            Document.getElementById("koumpi").addEventListener("click", test);
+            var sterm = document.getElementById("koumpi").value;
+            document.getElementById("koumpi").addEventListener("click", invoke(sterm));
         });
     </script>
 </head>
@@ -69,13 +69,15 @@
         </form>
         </p>
     </div>
-    <div class="col-md-4 col-md-offset-4" align="left" id="results">
+    <br />
+    <br />
+    <div class="col-md-6 col-md-offset-4" align="left" id="results">
 
     </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
